New table for grade 2 Malay braille (Malaysia) thanks to Herbert Koh

--- a/AUTHORS
+++ b/AUTHORS
@@ -132,6 +132,7 @@ TABLE AND TEST CONTRIBUTORS
   Hans Schou <chlor@schou.dk>
   Harri Pasanen <harri@mpaja.com>
   Henri Apperloo <h.apperloo@cbb.nl> from CBB <www.cbb.nl>
+  Herbert Koh <kohherbert@hotmail.com>
   Him Prasad Gautam
   Hurt Huang <hurt.nzsmr@gmail.com>
   Igor B. Poretsky <poretsky@mlbox.ru>
